--- a/.github/workflows/pr-template.yml
+++ b/.github/workflows/pr-template.yml
@@ -8,6 +8,9 @@ jobs:
   set-pr-template:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
+
       - name: Checa branch base e define template
         id: template
         run: |
